--- a/manifest.json
+++ b/manifest.json
@@ -2,11 +2,18 @@
     "name": "LeetCode difficulty extension",
     "version": "1.0",
     "description": "Hide problem difficulty practising in leetcode",
-    "permissions": ["activeTab", "declarativeContent", "storage"],
+    "permissions": ["activeTab", "declarativeContent", "storage", "tabs"],
     "background": {
         "scripts": ["background.js"],
         "persistent": false
     },
+    "content_scripts": [
+        {
+          "matches": ["https://leetcode.com/problems/*"],
+          "js": ["remove.js"],
+          "run_at": "document_idle"
+        }
+    ],
     "page_action": {
         "default_popup": "popup.html",
         "default_icon": {
